--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_mpitems_xml_by.xml
@@ -93,7 +93,7 @@
   <string id="b0pyML1S" text="{.Nijaki}Стургійскае Кап'ё"/>
   <string id="b5dkMbBp" text="{.Nijaki}Стургійскае Кароткае Кап'ё"/>
   <string id="B8p6E8GJ" text="{.Muzcynski}Табар"/>
-  <string id="bAXuK5eG" text="{.Zanocy}Эсэрайская Ламелярная Браня"/>
+  <string id="bAXuK5eG" text="{.Zanocy}Асэрайская Ламелярная Браня"/>
   <string id="bcnknjPD" text="{.Zanocy}Баттанійская Булава"/>
   <string id="bDfKz5SZ" text="{.Zanocy}Дзяга"/>
   <string id="BDGbu59Q" text="{.Muzcynski}Джакулан"/>
@@ -105,10 +105,10 @@
   <string id="brmba4ca" text="{.Mnozny}Лёгкія Дротыкі"/>
   <string id="Bruzcqbm" text="{.Zanocy}Цяжкая Глефа"/>
   <string id="btoJTO9G" text="{.Zanocy}Сякера Налётніка"/>
-  <string id="BwOZwFxm" text="{.Zanocy}Эсэрайская Піка"/>
+  <string id="BwOZwFxm" text="{.Zanocy}Асэрайская Піка"/>
   <string id="bYmKOh4p" text="{.Nijaki}Тэставае Кап'ё"/>
   <string id="bYxnCJjq" text="{.Muzcynski}Гамбезон Пяхотніка"/>
-  <string id="bZ0aUz2b" text="{.Zanocy}Эсэрайская Цяжкая Булава"/>
+  <string id="bZ0aUz2b" text="{.Zanocy}Асэрайская Цяжкая Булава"/>
   <string id="bzCoIgk7" text="{.Muzcynski}Ваярскія Біль"/>
   <string id="bzr6vtXi" text="{.Muzcynski}Цяжкі Менавліён"/>
   <string id="bzrVXGAl" text="{.Muzcynski}Бронзавы Аздоблены Пёрамі Шпангенхэльм над Скураю"/>
@@ -119,7 +119,7 @@
   <string id="cBZ6OlKW" text="{.Mnozny}Дротыкі"/>
   <string id="cCaHNMwf" text="{.Muzcynski}Горны Абкруткі Ног"/>
   <string id="CEk1LX84" text="{.Nijaki}Стургійскае Доўгае Кап'ё"/>
-  <string id="cEUqPott" text="{.Nijaki}Эсэрайскае Доўгае Кап'ё"/>
+  <string id="cEUqPott" text="{.Nijaki}Асэрайскае Доўгае Кап'ё"/>
   <string id="CgG2aRyh" text="{.Muzcynski}Лускаты Паўбард"/>
   <string id="CJCatm7j" text="{.Muzcynski}Палегчаны Дубовы Шчыт-Кропля"/>
   <string id="cjHygHb0" text="{.Muzcynski}Шыпаты Капалін над Набіўкаю"/>
@@ -137,26 +137,26 @@
   <string id="DnhVJl4d" text="{.Zanocy}Доўгая Пустэльная Роба"/>
   <string id="DScCbmoS" text="{.Mnozny}Баттанійскія Шляхетныя Наручы"/>
   <string id="DxRrAuRo" text="{.Nijaki}Баттанійскае Кап'ё"/>
-  <string id="DyXDcO36" text="{.Zanocy}Эсэрайская Упрыгожаная Ланцуговая Кальчуга"/>
+  <string id="DyXDcO36" text="{.Zanocy}Асэрайская Упрыгожаная Ланцуговая Кальчуга"/>
   <string id="e0SDWwmU" text="{.Zanocy}Грунтоўная Стэпавая Браня"/>
   <string id="Eb106Xg8" text="{.Muzcynski}Стургійскі Кароткі Меч"/>
-  <string id="eDMDUUfw" text="{.Zanocy}Эсэрайская Ланцуговая Кальчуга"/>
+  <string id="eDMDUUfw" text="{.Zanocy}Асэрайская Ланцуговая Кальчуга"/>
   <string id="eEMgc7yU" text="{.Muzcynski}Баттанійскі Узмоцнены Велізарны Шчыт"/>
   <string id="Ejx5lXjk" text="{.Muzcynski}Рэвільскі Перасьледнік"/>
   <string id="EOz0edW4" text="{.Muzcynski}Стэпавы Шалом"/>
   <string id="EPehLvzV" text="{.Mnozny}Імперскія Дротыкі"/>
   <string id="EpkGO9qE" text="{.Mnozny}Жалезныя Махові"/>
   <string id="eQBDt5Wk" text="{.Muzcynski}Люты Поні"/>
-  <string id="eso5zk60" text="{.Muzcynski}Эсэрайскі Шалом Шляхты"/>
+  <string id="eso5zk60" text="{.Muzcynski}Асэрайскі Шалом Шляхты"/>
   <string id="eTKxlDl1" text="{.Mnozny}Горныя Боты Вайскавода"/>
   <string id="FexNLsO5" text="{.Mnozny}Імперскія Дротыкі"/>
   <string id="FHakBPXw" text="{.Muzcynski}Гаўберк"/>
   <string id="FLBYsvxp" text="{.Muzcynski}Доўгі Меч"/>
   <string id="FmN4ryxu" text="{.Muzcynski}Выдатны Меч"/>
   <string id="FyXM8Iob" text="{.Mnozny}Пустэльныя Сатканыя Наплечнікі з Подбіўкай"/>
-  <string id="Gbfot0SN" text="{.Zanocy}Эсэрайская Булава Вершніка"/>
+  <string id="Gbfot0SN" text="{.Zanocy}Асэрайская Булава Вершніка"/>
   <string id="GEHTam8H" text="{.Muzcynski}Баттанійскі Шчыт Выведніка"/>
-  <string id="GFKPrrb8" text="{.Muzcynski}Эсэрайскі Шляхетны Шалом"/>
+  <string id="GFKPrrb8" text="{.Muzcynski}Асэрайскі Шляхетны Шалом"/>
   <string id="gfvG04SP" text="{.Mnozny}Пустэльныя Скураныя Наплечнікі з Подбіўкай"/>
   <string id="gKhpLiyg" text="{.Muzcynski}Кальчужны Пласьцінкавы Бард"/>
   <string id="Goloz0Vm" text="{.Muzcynski}Хаснфры"/>
@@ -190,7 +190,7 @@
   <string id="IKhu13vZ" text="{.Muzcynski}Лёгкі Круглы Шчыт"/>
   <string id="ilLE877K" text="{.Nijaki}Стэпавае Футравае Сядло"/>
   <string id="iNJr5HOM" text="{.Zanocy}Піка-Швайка"/>
-  <string id="inquCxkd" text="{.Nijaki}Эсэрайскае Кап'ё"/>
+  <string id="inquCxkd" text="{.Nijaki}Асэрайскае Кап'ё"/>
   <string id="inr9Mt1i" text="{.Zanocy}Хузаіцкая Дзіда"/>
   <string id="INWSxn7C" text="{.Mnozny}Бронзавыя Ламелярныя Наплечнікі"/>
   <string id="inYBaDwu" text="{.Muzcynski}Жалезны Аздоблены Пёрамі Шпангенхэльм над Кальчугай"/>
@@ -208,7 +208,7 @@
   <string id="JbTCDDb0" text="{.Mnozny}Балты"/>
   <string id="jEHLd5gm" text="{.Muzcynski}Кілідж"/>
   <string id="JfPqJbK6" text="{.Muzcynski}Хуткі Чарджэр"/>
-  <string id="jhgVsWKr" text="{.Muzcynski}Тайл"/>
+  <string id="jhgVsWKr" text="{.Muzcynski}Конь Цял"/>
   <string id="jjHpXY4d" text="{.Muzcynski}Футравы Каптур"/>
   <string id="JkLoAelJ" text="{.Mnozny}Кальчужныя Наплечнікі"/>
   <string id="jm9CnURw" text="{.Mnozny}Цяжкія Стрэлы з Шылам"/>
@@ -216,21 +216,21 @@
   <string id="Jt0Mcn4D" text="{.Zanocy}Браня Дзікуна"/>
   <string id="JW1mE68R" text="{.Zanocy}Шматслаёвая Пустэльная Роба"/>
   <string id="jy1VQ7Yg" text="{.Zanocy}Хузаіцкая Булава Вершніка"/>
-  <string id="KD4pxN2C" text="{.Muzcynski}Эсэрайскі Шляхетны Меч"/>
+  <string id="KD4pxN2C" text="{.Muzcynski}Асэрайскі Шляхетны Меч"/>
   <string id="KIxX6dH2" text="{.Muzcynski}Грубы Футр над Ланцугамі"/>
   <string id="kOV5t7Yx" text="{.Zanocy}Данусьціка"/>
   <string id="KpyTaAwL" text="{.Muzcynski}Горны Пласьцінкавы Шляхетны Шалом"/>
   <string id="L0aYVd65" text="{.Zanocy}Туніка Простага Чалавека"/>
   <string id="l2j9CAQn" text="{.Muzcynski}Меч Бастарда"/>
-  <string id="l2pEOHk6" text="{.Zanocy}Эсэрайская Сякера"/>
+  <string id="l2pEOHk6" text="{.Zanocy}Асэрайская Сякера"/>
   <string id="Ldqb9oAF" text="{.Mnozny}Горныя Палдроны Вайскавода"/>
-  <string id="LI3rc6S2" text="{.Zanocy}Эсэрайская Кідальная Сякера"/>
+  <string id="LI3rc6S2" text="{.Zanocy}Асэрайская Кідальная Сякера"/>
   <string id="lPeLZge5" text="{.Mnozny}Мехавыя Браняваныя Штаны"/>
   <string id="lspv3mUE" text="{.Muzcynski}Шыпаваны Стэпавы Бард"/>
   <string id="Lt8nT1hb" text="{.Mnozny}Ламелярныя Наплечнікі"/>
   <string id="LwxELoZL" text="{.Zanocy}Горная Лускатая Паўзапрэжка"/>
   <string id="lwxOPEPx" text="{.Muzcynski}Гладыус"/>
-  <string id="lxDZyKbU" text="{.Zanocy}Эсэрайская Цяжкая Дзіда"/>
+  <string id="lxDZyKbU" text="{.Zanocy}Асэрайская Цяжкая Дзіда"/>
   <string id="LyaWykYa" text="{.Muzcynski}Шляхетны Шалом з Гаржэтам"/>
   <string id="Mbf8qAxs" text="{.Zanocy}Доўгая Двухгаловая Сякера"/>
   <string id="mbT1uNPa" text="{.Muzcynski}Кінжал"/>
@@ -239,14 +239,14 @@
   <string id="MS1gaKXk" text="{.Zanocy}Баттанійская Кідальная Сякера"/>
   <string id="ms4AKynl" text="{.Mnozny}Пласьцінкавыя Боты"/>
   <string id="mStaaxFF" text="{.Mnozny}Пустэльныя Кольцакальчужныя Наплечнікі"/>
-  <string id="MUdwS6jH" text="{.Muzcynski}Дужы Тайл"/>
+  <string id="MUdwS6jH" text="{.Muzcynski}Дужы Цял"/>
   <string id="mVAaWp5U" text="{.Muzcynski}Імперскі Чарджэр"/>
   <string id="mXQsNAmZ" text="{.Muzcynski}Стрэлы з Шылам"/>
   <string id="n21mBbbR" text="{.Muzcynski}Біль"/>
   <string id="nbjUGjaZ" text="{.Muzcynski}Стургійскі Шчыт Вершніка"/>
   <string id="newiAaR9" text="{.Muzcynski}Упрыгожаны Шалом з Абаронай Вачэй"/>
   <string id="nhoDWrVf" text="{.Muzcynski}Сеткавы Тэставы Меч 2г"/>
-  <string id="Nk7bQUWJ" text="{.Muzcynski}Эсэрайскі Двухручны Меч"/>
+  <string id="Nk7bQUWJ" text="{.Muzcynski}Асэрайскі Двухручны Меч"/>
   <string id="NKZ0P4aU" text="{.Zanocy}Вландыйская Доўгая Дзіда"/>
   <string id="nmLZEjYg" text="{.Zanocy}Сеткавая Тэставая Булава 2г"/>
   <string id="Np2OoVNd" text="{.Zanocy}Стургійская Лёгкая Булава"/>
@@ -320,7 +320,7 @@
   <string id="UG8aeEQH" text="{.Muzcynski}Імперскі Вайсковы Конь"/>
   <string id="UHcXARc6" text="{.Muzcynski}Ільд"/>
   <string id="UHItyOQY" text="{.Zanocy}Стэпавая Шыпаваная Скура"/>
-  <string id="ujB7Eq9S" text="{.Zanocy}Эсэрайская Булава"/>
+  <string id="ujB7Eq9S" text="{.Zanocy}Асэрайская Булава"/>
   <string id="UkR3F9lV" text="{.Muzcynski}Вландыйскі Шляхетны Меч"/>
   <string id="Ur3Q4U5x" text="{.Zanocy}Цяжкая Шапка з Тартанам"/>
   <string id="uvmmBd41" text="{.Muzcynski}Пустэльны Злучаны Круглы Шчыт"/>
@@ -350,7 +350,7 @@
   <string id="WsUvpBwM" text="{.Muzcynski}Хуткі Кароткі Лук"/>
   <string id="wwAFqJE3" text="{.Muzcynski}Збройны Меч"/>
   <string id="WXjQNIJW" text="{.Muzcynski}Вольны Загорнуты Пустэльны Шалом"/>
-  <string id="WyxIVvhe" text="{.Muzcynski}Эсэрайскі Авальны Шчыт"/>
+  <string id="WyxIVvhe" text="{.Muzcynski}Асэрайскі Авальны Шчыт"/>
   <string id="xb2tMFSz" text="{.Muzcynski}Кароткі Лук"/>
   <string id="XcWJyWlF" text="{.Zanocy}Вландыйская Булава"/>
   <string id="XiI81DUa" text="{.Muzcynski}Доўгі Лук Суродзіча"/>
@@ -379,7 +379,7 @@
   <string id="z8d2uyY1" text="{.Muzcynski}Сегментаваны Цэрвельер над Шнураваным Коіфам"/>
   <string id="ZFde57gC" text="{.Nijaki}Трывалае Горнае Сядло"/>
   <string id="ZJweh5Oh" text="{.Zanocy}Сякера Бастарда"/>
-  <string id="zKJtr0MV" text="{.Muzcynski}Мэкеб"/>
+  <string id="zKJtr0MV" text="{.Muzcynski}Макеб"/>
   <string id="zmEnxUpL" text="{.Muzcynski}Імперскі Лускаты Бард"/>
   <string id="zNoDVcHg" text="{.Muzcynski}Троттэр"/>
   <string id="Zo7jJbQj" text="{.Muzcynski}Пустэльны Шалом з Кальчугай"/>
