--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_native_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_native_strings_xml_by.xml
@@ -157,13 +157,13 @@
     <string id="f4ZeGAJi" text="Адносная хуткасьць снарада: {SPEED} м/с" />
     <string id="f5y9qyDb" text="Рука" />
     <string id="F6dUDgg3" text="Параза" />
-    <string id="F6l8hFEA" text="Скалы Эккалат" />
+    <string id="F6l8hFEA" text="Скалы Аккалату" />
     <string id="F6WH1JaM" text="Заблакаваць для Чальцоў Каманды" />
     <string id="fFLBT9wb" text="Грудзі" />
     <string id="FFNJTsDL" text="Выгнаць гульца" />
     <string id="FgJpTBp1" text="Сяброўскі Агонь: Шкода Далёкага Бою па Сабе" />
     <string id="fjD2tRXW" text="Падбародак Упярод" />
-    <string id="fJHsYtKu" text="Эчэрыён" />
+    <string id="fJHsYtKu" text="Эхерыён" />
     <string id="fJqJiJvl" text="Ужываць Рэалістычны Блок" />
     <string id="fnJQO5Os" text="Вышыня Кончыка Носа" />
     <string id="FoSTFipC" text="{PLAYER_NAME} зараз разглушаны." />
@@ -217,7 +217,7 @@
     <string id="KHx75GnA" text="Вада" />
     <string id="Kl9aqIuX" text="Раса" />
     <string id="kQh0O7gn" text="Абярыце жаданага ваяра напачатку раўнда з дапамогай золата." />
-    <string id="KtRCqiVO" text="Пэндраік" />
+    <string id="KtRCqiVO" text="Пендрак" />
     <string id="kVwwG63i" text="Дазволіць Зьмену Мапы Галасаваньнем" />
     <string id="kW4c2liv" text="Ужываць Блок, што Залежыць ад Ходу Анімацыі" />
     <string id="L0lGQWt5" text="Колькасьць Ботаў Каманды 2" />
@@ -227,7 +227,7 @@
     <string id="laIfauZH" text="Выпукласьць Вачэй" />
     <string id="lauXoy6d" text="Колькасьць Ботаў на Пабудову" />
     <string id="lclQSt39" text="Ліміт Часу Раўнда (секундаў)" />
-    <string id="ldIXGrVi" text="Юрыкскалар" />
+    <string id="ldIXGrVi" text="Урыкскалар" />
     <string id="lDPQa5gc" text="Парог Аўтабалансу Камандаў" />
     <string id="likop0am" text="Пачаць Галасаваньне" />
     <string id="LkiQDpi5" text="Памер Вушэй" />
@@ -397,7 +397,7 @@
     <string id="WsmZzaOq" text="Слупок" />
     <string id="WXAaWZVf" text="Назад" />
     <string id="Wxlhg1f1" text="Боты" />
-    <string id="WxM16s2Y" text="Лес Друімор" />
+    <string id="WxM16s2Y" text="Лес Друммор" />
     <string id="wxzhtvZR" text="Час Адраджэньня Абаронцаў" />
     <string id="xgr9rlx3" text="Паўстаньне Асрака" />
     <string id="xhnV76OL" text="Прыстань Скала" />
@@ -413,7 +413,7 @@
     <string id="yekjRMT1" text="Статыстыка Дуэлі" />
     <string id="YhDDXj0I" text="Каньён" />
     <string id="YNkPy4ta" text="Кланавы Матч" />
-    <string id="YntJTd09" text="Гарадзішча Эберэт" />
+    <string id="YntJTd09" text="Гарадзішча Эберэх" />
     <string id="YoNYyLba" text="Кап'ё" />
     <string id="yQtzabbe" text="Закрыць" />
     <string id="yQu6aBw4" text="Перагрупавацца!" />
