--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_photo_mode_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/Native/std_photo_mode_strings_xml_by.xml
@@ -5,21 +5,21 @@
 
   <strings>
     <string id="05w8Tl7n" text="Стэп" />
-    <string id="0RRNliSj" text="Эсэрайская Сьпёка" />
+    <string id="0RRNliSj" text="Асэрайская Сьпёка" />
     <string id="2vhjwPaN" text="Вёска" />
     <string id="4MiTBGqa" text="Дзень Нордаў" />
     <string id="7kFFXSuD" text="Цёмныя Хмары" />
     <string id="7UbviYSn" text="Стургійская Ласка" />
     <string id="8fjSQ7HR" text="Лёгкія Воблакі" />
-    <string id="9cu05mOt" text="Эсэрайская Ласка" />
+    <string id="9cu05mOt" text="Асэрайская Ласка" />
     <string id="9fBE1860" text="Кінематаграфічная Цеплыня" />
     <string id="aANW0vf6" text="Баттанійская Лютасьць" />
     <string id="aJMfnIEx" text="Ласкавая Цеплыня" />
     <string id="an3FWmCf" text="Халодны Вецер" />
     <string id="avaaYc8p" text="Баттанійская Ласка" />
-    <string id="cyfUXaO9" text="Эсэрайская Лютасьць" />
+    <string id="cyfUXaO9" text="Асэрайская Лютасьць" />
     <string id="DHbyketz" text="Стургійская Лютасьць" />
-    <string id="dI09DMKh" text="Сэрца Рыджыі" />
+    <string id="dI09DMKh" text="Сэрца Рагаэі" />
     <string id="dQBd8xBj" text="Апанурасьць" />
     <string id="etcyLg5M" text="Радасьць Маслу" />
     <string id="FyYbkPtB" text="Імперская Лютасьць" />
