--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_SandBox_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_SandBox_by.xml
@@ -96,7 +96,7 @@
     <string id="3sRdGQou" text="Сысьці" />
     <string id="3tmXBpRH" text="Вы маеце рацыю. Я не змагу зрабіць гэтае, таму вярнуся да сваёй сям'і. " />
     <string id="3UX334MB" text="Хмм... Файна. Прабачце за турбаваньне." />
-    <string id="3v3ZTccn" text="Вы будзеце {?PLAYER.GENDER}прылічана да дачок{?}прылічаны да сыноў{\?} Эсэра. Ваша кроў - наша кроў. Нашыя мячы будуць бараніць вашыя правы, а вашыя будуць бараніць нашыя. Вы можаце піць з нашых студняў і адпачываць у ценях нашых дрэваў. Вам можа быць дадзена права судзіць і зьбіраць падаткі з аазісаў і гарадоў." />
+    <string id="3v3ZTccn" text="Вы будзеце {?PLAYER.GENDER}прылічана да дачок{?}прылічаны да сыноў{\?} Асэра. Ваша кроў - наша кроў. Нашыя мячы будуць бараніць вашыя правы, а вашыя будуць бараніць нашыя. Вы можаце піць з нашых студняў і адпачываць у ценях нашых дрэваў. Вам можа быць дадзена права судзіць і зьбіраць падаткі з аазісаў і гарадоў." />
     <string id="3WA4MLzx" text="Так ці іначай, вы пашкадуеце аб гэтым. Калі я прайграю, мой народ адпомсьціць.[if:idle_angry][ib:warrior]" />
     <string id="3wzCrzEq" text="{HERO.LINK} {?HERO.GENDER}атрымала ўзровень{?}атрымаў узровень{\?}." />
     <string id="3XimdHOn" text="Адкуль мне ведаць, што ён не прымушае вас гаварыць гэтае?" />
@@ -617,7 +617,7 @@
     <string id="FVOfzPot" text="{SALUTATION}... Дзякуй за маё вызваленьне." />
     <string id="FvtAJE2Q" text="Каб знайсьці дачку {QUEST_GIVER.LINK}, вы вырашылі наведаць блізкія вёскі." />
     <string id="Fwm0PwVb" text="Выдатна. Як я ўжо казаў, нам трэба прынамсі {NUMBER} дзён, да таго як яны саслабяць сваю пільнасьць. Я дам вам ведаць, калі прыйдзе час. Памятайце, мы чакаем цемры ночы, каб зьдзейсьніць удар." />
-    <string id="FxKgQECI" text="Люкан, Люкан кажу, шляхціч. Быў народжаны старым, стаў больш старым.{newline}Жыве ў палацы з золата. Дзе заўсёды цёмна і заўсёды халодна." />
+    <string id="FxKgQECI" text="Люкон, Люкон кажу, шляхціч. Быў народжаны старым, стаў больш старым.{newline}Жыве ў палацы з золата. Дзе заўсёды цёмна і заўсёды халодна." />
     <string id="fzNqSoeL" text="Выкарыстайце гэтулькі часу, колькі вам патрэбна, спадарыня." />
     <string id="g5G8AJ5n" text="Зараз вы {?CONVERSATION_NPC.GENDER}мая палонная{?}мой палонны{\?}." />
     <string id="g5ofoKa8" text="Так... Зараз я вас успамінаю." />
@@ -809,7 +809,7 @@
     <string id="KAvwytDK" text="Вы не прывялі {DAUGHTER.NAME} да {QUEST_GIVER.LINK}. {?QUEST_GIVER.GENDER}Яна ў{?}Ён у{\?} лютасьці." />
     <string id="kB65SzbF" text="Так." />
     <string id="KbMew14D" text="Хаця верхавод банды і караваньнік аб'ядналі свае сілы, вы пасьпяхова перамаглі іх і захапілі здабычу сабе." />
-    <string id="kc3tLqGy" text="Вы кіруеце сынамі Эсэра ў вайне і міры..." />
+    <string id="kc3tLqGy" text="Вы кіруеце сынамі Асэра ў вайне і міры..." />
     <string id="kc6vCycY" text="Што менавіта вы жадаеце ад мяне?" />
     <string id="kDItfaaN" text="Я вазьму яшчэ адну, каб сагрэцца па дарозе дадому." />
     <string id="ke0IvBXb" text="Што яшчэ я магу патлумачыць?" />
@@ -1129,7 +1129,7 @@
     <string id="qmqTLZ9R" text="Дзякуй, {?PLAYER.GENDER}шляхцянка{?}шляхціч{\?}. Вы {?PLAYER.GENDER}нашая ратавальніца{?}нашы ратавальнік{\?}." />
     <string id="qN2LYVIO" text="Так, я ведаю {HERO.LINK}." />
     <string id="QNpuyzc4" text="Супакойся. Мяне болей не цікавіць гэтае месца. Супакойся." />
-    <string id="qObicX7y" text="Я клянуся прыслухоўвацца да вашых выракаў у адпаведнасьці з законамі Эсэра і сачыць за тым, каб мае суродзічы таксама прыслухоўваліся да іх...." />
+    <string id="qObicX7y" text="Я клянуся прыслухоўвацца да вашых выракаў у адпаведнасьці з законамі Асэра і сачыць за тым, каб мае суродзічы таксама прыслухоўваліся да іх...." />
     <string id="QP7L2YLG" text="Гучыць павабна." />
     <string id="qPRl07mD" text="Добра. Тады я паспрабую." />
     <string id="qQ71Ux7D" text=" Вашае войска падзялілася сваёй ежай з вашымі галоднымі ваярамі. Вы выдаткавалі {INFLUENCE}{INFLUENCE_ICON}." />
@@ -1237,7 +1237,7 @@
     <string id="t4KwQOB7" text="{HERO.NAME} {?HERO.GENDER}дасягнула{?}дасягнуў{\?} паўналецьця." />
     <string id="T5jd4m69" text="Так, будзе толькі весялей. Пра якую суму вы думалі?" />
     <string id="tc4DyxaL" text="Так, я хацеў бы прадаць." />
-    <string id="TCIaDC9X" text="Ворагі Вландыі прыйшлі з грукатам. Кароль Дэртарт склікаў сваіх людзей у замак!{newline}Яны паскакалі да яго, грукаючы капытамі. Але Дэртарт ужо лёг спаць." />
+    <string id="TCIaDC9X" text="Ворагі Вландыі прыйшлі з грукатам. Кароль Дэртэрт склікаў сваіх людзей у замак!{newline}Яны паскакалі да яго, грукаючы капытамі. Але Дэртэрт ужо лёг спаць." />
     <string id="TD8Jxn7U" text="Добрага дня, {?PLAYER.GENDER}мая шляхцянка{?}мой шляхціч{\?}." />
     <string id="TDgoyFBi" text="Ня надта шмат працы... Швіва, цыроўка, іншае." />
     <string id="TdnD29Ax" text="Ах! Вы амаль злавілі мяне! Можа, вы не былі досыць {?PLAYER.GENDER}уважлівай{?}уважлівым{\?}. Жадаеце паставіць яшчэ 1000 дэнараў на стол і паспрабаваць ізноў?" />
@@ -1466,7 +1466,7 @@
     <string id="yAOQnMVw" text="Вы з {FACTION}, верна? Значыць вы {?NOTABLE.GENDER}мая палонная{?}мой палонны{\?}." />
     <string id="ybagz7xY" text="Ня трэба дзякаваць." />
     <string id="ydGffr9O" text="Дзякуй, {?PLAYER.GENDER}добрая пані{?}добры панове{\?}. Я ніколі не забуду як вы мне аказалі добрую паслугу.[if:convo_calm_friendly]" />
-    <string id="YDMlCaaz" text="Вялікі Хан Моньчаг падымае руку. Мы ўсе слухаем яго загад!{newline}Вялікі Хан Моньчаг з'язджае. Мы вяртаемся спаць і граць." />
+    <string id="YDMlCaaz" text="Вялікі Хан Мончуг падымае руку. Мы ўсе слухаем яго загад!{newline}Вялікі Хан Мончуг з'язджае. Мы вяртаемся спаць і граць." />
     <string id="YdwLnWa1" text="Кірунак дачкі і разбойніка" />
     <string id="YdZtydK4" text="Так здарылася, {PLAYER.NAME}, што я {?SPEAKER.GENDER}абяцала{?}абяцаў{\?} {FACTION_LEADER} наняць кампанію наймітаў для наступнай кампаніі." />
     <string id="ye4oqBFB" text="Вы прайгралі ў настольную гульню і не змаглі дапамагчы {QUEST_GIVER.LINK}. &quot;Дзякуй за спробу, {PLAYER.NAME}, але, здаецца, я {?QUEST_GIVER.GENDER}абрала{?}абраў{\?} не таго чалавека для гэтай працы.&quot;" />
