--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -322,7 +322,7 @@
   <string id="3TmLIou4" text="Жыв."/>
   <string id="3UB3qhjk" text="{VALUE}% хуткасьць руху партыяў закліканых у вашае войска."/>
   <string id="3uvbVxfx" text="Вы даставілі зброю да {QUEST_GIVER.LINK} як і абяцалі."/>
-  <string id="3v3ZTccn" text="Вы будзеце прылічаны да {?PLAYER.GENDER}дочак{?}сыноў{\?} Эсэра. Вашая кроў - нашая кроў. Нашыя мячы будуць бараніць вашыя правы, а вашыя будуць бараніць нашыя. Вы можаце піць з нашых студняў і адпачываць у ценях нашых дрэваў. Вам можа быць даравана права судзіць і зьбіраць падаткі з аазісаў і гарадоў."/>
+  <string id="3v3ZTccn" text="Вы будзеце прылічаны да {?PLAYER.GENDER}дочак{?}сыноў{\?} Асэра. Вашая кроў - нашая кроў. Нашыя мячы будуць бараніць вашыя правы, а вашыя будуць бараніць нашыя. Вы можаце піць з нашых студняў і адпачываць у ценях нашых дрэваў. Вам можа быць даравана права судзіць і зьбіраць падаткі з аазісаў і гарадоў."/>
   <string id="3V5udYJO" text="Вы рэкрутавалі разбойнікаў у сваю партыю. {QUEST_GIVER.LINK} знаходзіць вашы разьвязак прымальным і пасылае вам абяцаныя {GOLD_AMOUNT}{GOLD_ICON}."/>
   <string id="3vFxRKja" text="Вы адмовіліся ад яго прапановы і вырашылі сілай забраць астатні прыбытак. Вашы учынак расхваляваў вясковых зямянаў і раззлаваў жыхароў. Частка вяскоўцаў спрабавала супрацівіцца. У сварцы паранілі {WOUNDED_COUNT} вашых людзей."/>
   <string id="3VxA6HaZ" text="Гэта для мяне."/>
@@ -2400,7 +2400,7 @@
   <string id="JBa4DO2u" text="{VALUE}% шкода, што наносіцца сьценам падчас бамбаваньня ў аблозе."/>
   <string id="jbAtOsIy" text="Патагонныя Майстэрні"/>
   <string id="jBN2LlgF" text="Мы будзем змагацца да апошняй кроплі крыві!"/>
-  <string id="jbPZTSP4" text="Саджытарыюс"/>
+  <string id="jbPZTSP4" text="Кентаўр"/>
   <string id="Jc1YXXjN" text="прыток дзікіх зьвяроў"/>
   <string id="jd4qUGEA" text="Я жадаю абмеркаваць канчатковыя ўмовы майго шлюбу з {COURTSHIP_PARTNER}."/>
   <string id="JDfnPFsW" text="{PEACEMAKER_RULER.NAME} з гаспадарства {KINGDOM_CONSIDERING_PEACE} {?QUEST_GIVER.GENDER}вырашыла{?}вырашыў{\?} абвясьціць мір з гаспадарствам {KINGDOM} нягледзячы на супраціў свайго сойму."/>
@@ -2566,7 +2566,7 @@
   <string id="KbQQV5rI" text="Мая клятва - гэта мая клятва. Я не магу яе парушыць. (Перакананьне вернасьці не атрымалася.)"/>
   <string id="KBxajw4c" text="Увайсьці ў вязьніцу (Чыт)"/>
   <string id="kc3RfwFb" text="Я паспрабую быць карысным, {?PLAYER.GENDER}мая пані{?}панове{\?}."/>
-  <string id="kc3tLqGy" text="Вы вядзеце сыноў Эсэра ў вайне і кіруеце ў міры..."/>
+  <string id="kc3tLqGy" text="Вы вядзеце сыноў Асэра ў вайне і кіруеце ў міры..."/>
   <string id="KC7rLf4b" text="{?IS_BATTANIA}Бард{?}Менестрэль{\?} прымушаў дзіцё завучваць гаворкі эпічных герояў, навучаючы {?CHILD.GENDER}яе{?}яго{\?} поклічу да гонару вашага народа за сваіх продкаў."/>
   <string id="Kc9oatmM" text="Хуткая Стральба"/>
   <string id="kcuNzSvf" text="Я маю іншых людзей на прымеце."/>
@@ -3540,7 +3540,7 @@
   <string id="QNV1b5s5" text="Гэныя браканьеры дагэтуль ў справе?[ib:normal2][if:convo_undecided_open]"/>
   <string id="qNxdWLFY" text="Дык, я мушу паляваць на іх?"/>
   <string id="QO0EX2O3" text="Вядома. Я магу загадаць аднаму кампаньёну і {TROOP_AMOUNT} ваярам суправадзіць вашыя статкі на пашу ў {TARGET_SETTLEMENT}."/>
-  <string id="qObicX7y" text="Я клянуся прыслухоўвацца да вашых пастановаў у адпаведнасьці з законамі Эсэра і сачыць за тым, каб мае сваякі таксама прыслухоўваліся да іх..."/>
+  <string id="qObicX7y" text="Я клянуся прыслухоўвацца да вашых пастановаў у адпаведнасьці з законамі Асэра і сачыць за тым, каб мае сваякі таксама прыслухоўваліся да іх..."/>
   <string id="qOhDHFyH" text="Вы чарговы халуй {QUEST_GIVER.NAME}? Няўжо {?QUEST_GIVER.GENDER}яна паслала{?}ён паслаў{\?} цябе паляваць на мяне, як на жывёлу? Дык, думаю, вы зразумелі, што злавілі ня зайца, а льва.[if:convo_confused_annoyed][ib:aggressive]"/>
   <string id="QOiPDGbf" text="Я ніколі ня {?SPEAKER.GENDER}чула{?}чуў{\?} пра вашы клан. Я не {?SPEAKER.GENDER}ўпэўнена{?}ўпэўнены{\?}, што магу даверыцца вам.[ib:closed][if:convo_grave]"/>
   <string id="QOMr1QS7" text="{VALUE}% шкода супраць бандытаў падчас адпраўленьня ваяроў на змаганьне з ворагам."/>
@@ -4283,7 +4283,7 @@
   <string id="VlbCFDWu" text="Што вам трэба ад мяне?"/>
   <string id="VldAzBo5" text="Я мушу нешта сказаць. Тое, што мы зрабілі з той вёскай - гэта было няслушна. Бо яны былі нявіннымі земляробамі, іх хаты і палі нельга было рабаваць і спальваць. Я болей ня буду гэтага рабіць."/>
   <string id="VLLAOXve" text="Чаканьне ночы для зладжваньня засады"/>
-  <string id="VlOGrGSn" text="Вашы персанаж ступіў на шлях прыгод у веку..."/>
+  <string id="VlOGrGSn" text="Вашы персанаж пайшоў шляхам прыгодаў ува ўзросьце..."/>
   <string id="VlPD0Dhh" text="Толькі шляхетныя васалы гаспадара {FACTION_LEADER} маюць гонар несьці свае ўласныя сьцягі. Але праслужыўшы пэўны час наймітам, магчыма, вы зможаце заслужыць магчымасьць прысягнуць гаспадару {FACTION_LEADER} і стаць яго васалам, атрымаўшы права абраць уласны сьцяг і змагацца пад ім у боі."/>
   <string id="VlU9nnLY" text="Добра. Аддайце нам належнае, і вы зможаце прайсьці."/>
   <string id="vLVAfcta" text="Тамаскінская Сталь{@Plural}сьліткаў тамаскінскай сталі{\@}"/>
