--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
@@ -601,7 +601,7 @@
     <string id="Cdecpigb" text="{.Muzcynski}Стургійскі Карэнны{@Plural}Стургійскіх Карэнных{\@}" />
     <string id="CHxRDUN1" text="{.Nijaki}Трывалае Футравае Сядло" />
     <string id="CjjzWA1r" text="{.Muzcynski}Пустэльны Вайсковы Конь{@Plural}Пустэльных Вайсковых Коней{\@}" />
-    <string id="daI3Ybk8" text="{.Muzcynski}Глінтарскі Поні{@Plural}Глінтарскіх Поні{\@}" />
+    <string id="daI3Ybk8" text="{.Muzcynski}Глінторскі Поні{@Plural}Глінторскіх Поні{\@}" />
     <string id="ds1nrqNv" text="{.Muzcynski}Лускаты Бард Катафракта" />
     <string id="DvGueBrU" text="Лён{@Plural}скруткаў лёну{\@}" />
     <string id="EfRKaKs0" text="{.Zanocy}Стэпавая Футравая Запрэжка" />
@@ -609,7 +609,7 @@
     <string id="ELsDFwAD" text="Віно{@Plural}амфараў віна{\@}" />
     <string id="f2O1XjYd" text="{.Zanocy}Сабака" />
     <string id="FhTUc64z" text="{.Muzcynski}Гусак" />
-    <string id="FkqbAeoY" text="{.Muzcynski}Сьвенрынскі Поні{@Plural}Сьвенрынскіх Поні{\@}" />
+    <string id="FkqbAeoY" text="{.Muzcynski}Швенрынскі Поні{@Plural}Швенрынскіх Поні{\@}" />
     <string id="GD4aQgl7" text="Авечка{@Plural}авечак{\@}" />
     <string id="GSiBXOfg" text="{.Muzcynski}Стургійскі Троттэр{@Plural}Стургійскіх Троттэраў{\@}" />
     <string id="HAcujhib" text="{.Muzcynski}Вярблюд{@Plural}Вярблюдаў{\@}" />
@@ -663,7 +663,7 @@
     <string id="U3SWNkFt" text="{.Muzcynski}Вайсковы Конь{@Plural}Вайсковых Коней{\@}" />
     <string id="ufnnUxKb" text="Скура{@Plural}скрыняў скуры{\@}" />
     <string id="uRqm1nJ7" text="{.Nijaki}Лёгкае Сядло" />
-    <string id="uTt4HX6V" text="{.Muzcynski}Конь Тайл{@Plural}Коней Тайл{\@}" />
+    <string id="uTt4HX6V" text="{.Muzcynski}Конь Цял{@Plural}Коней Цял{\@}" />
     <string id="VbL6GFmy" text="Масла{@Plural}бондаў масла{\@}" />
     <string id="Vj4ZBxm5" text="{.Muzcynski}Узмоцнены Пласьцінкавы Бард" />
     <string id="voORddjl" text="{.Muzcynski}Кошыян{@Plural}Коней Кошыян{\@}" />
@@ -671,7 +671,7 @@
     <string id="VqCS28U1" text="{.Muzcynski}Мул{@Plural}Мулаў{\@}" />
     <string id="Vqu67a3b" text="Сыры шоўк{@Plural}скруткаў сырога шоўку{\@}" />
     <string id="vRIpgxhi" text="{.Muzcynski}Выбар Фартуны" />
-    <string id="vXsifw1K" text="{.Muzcynski}Эсалігат{@Plural}Коней Эсалігат{\@}" />
+    <string id="vXsifw1K" text="{.Muzcynski}Асалігат{@Plural}Коней Асалігат{\@}" />
     <string id="w6Oz5viK" text="{.Muzcynski}Міжземны Полфры{@Plural}Міжземных Полфры{\@}" />
     <string id="W8r7A7qH" text="{.Muzcynski}Лускаты Паўбард" />
     <string id="Wj98Otmo" text="{.Muzcynski}Стэпавы Чарджэр{@Plural}Стэпавых Чарджэраў{\@}" />
