--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_mpitems_xml_by.xml
@@ -93,7 +93,7 @@
   <string id="b0pyML1S" text="{.Nijaki}Sturhijskaje Kapjo"/>
   <string id="b5dkMbBp" text="{.Nijaki}Sturhijskaje Karotkaje Kapjo"/>
   <string id="B8p6E8GJ" text="{.Muzcynski}Tabar"/>
-  <string id="bAXuK5eG" text="{.Zanocy}Eserajskaja Łamielarnaja Brania"/>
+  <string id="bAXuK5eG" text="{.Zanocy}Aserajskaja Łamielarnaja Brania"/>
   <string id="bcnknjPD" text="{.Zanocy}Battanijskaja Bułava"/>
   <string id="bDfKz5SZ" text="{.Zanocy}Dziaha"/>
   <string id="BDGbu59Q" text="{.Muzcynski}Džakułan"/>
@@ -105,10 +105,10 @@
   <string id="brmba4ca" text="{.Mnozny}Lohkija Drotyki"/>
   <string id="Bruzcqbm" text="{.Zanocy}Ciažkaja Hlefa"/>
   <string id="btoJTO9G" text="{.Zanocy}Siakiera Nalotnika"/>
-  <string id="BwOZwFxm" text="{.Zanocy}Eserajskaja Pika"/>
+  <string id="BwOZwFxm" text="{.Zanocy}Aserajskaja Pika"/>
   <string id="bYmKOh4p" text="{.Nijaki}Testavaje Kapjo"/>
   <string id="bYxnCJjq" text="{.Muzcynski}Hambiezon Piachotnika"/>
-  <string id="bZ0aUz2b" text="{.Zanocy}Eserajskaja Ciažkaja Bułava"/>
+  <string id="bZ0aUz2b" text="{.Zanocy}Aserajskaja Ciažkaja Bułava"/>
   <string id="bzCoIgk7" text="{.Muzcynski}Vajarskija Bil"/>
   <string id="bzr6vtXi" text="{.Muzcynski}Ciažki Mienavlijon"/>
   <string id="bzrVXGAl" text="{.Muzcynski}Bronzavy Azdobleny Piorami Španhienchelm nad Skuraju"/>
@@ -119,7 +119,7 @@
   <string id="cBZ6OlKW" text="{.Mnozny}Drotyki"/>
   <string id="cCaHNMwf" text="{.Muzcynski}Horny Abkrutki Noh"/>
   <string id="CEk1LX84" text="{.Nijaki}Sturhijskaje Doŭhaje Kapjo"/>
-  <string id="cEUqPott" text="{.Nijaki}Eserajskaje Doŭhaje Kapjo"/>
+  <string id="cEUqPott" text="{.Nijaki}Aserajskaje Doŭhaje Kapjo"/>
   <string id="CgG2aRyh" text="{.Muzcynski}Łuskaty Paŭbard"/>
   <string id="CJCatm7j" text="{.Muzcynski}Palehčany Dubovy Ščyt-Kropla"/>
   <string id="cjHygHb0" text="{.Muzcynski}Šypaty Kapalin nad Nabiŭkaju"/>
@@ -137,26 +137,26 @@
   <string id="DnhVJl4d" text="{.Zanocy}Doŭhaja Pustelnaja Roba"/>
   <string id="DScCbmoS" text="{.Mnozny}Battanijskija Šlachietnyja Naručy"/>
   <string id="DxRrAuRo" text="{.Nijaki}Battanijskaje Kapjo"/>
-  <string id="DyXDcO36" text="{.Zanocy}Eserajskaja Upryhožanaja Łancuhovaja Kalčuha"/>
+  <string id="DyXDcO36" text="{.Zanocy}Aserajskaja Upryhožanaja Łancuhovaja Kalčuha"/>
   <string id="e0SDWwmU" text="{.Zanocy}Hruntoŭnaja Stepavaja Brania"/>
   <string id="Eb106Xg8" text="{.Muzcynski}Sturhijski Karotki Mieč"/>
-  <string id="eDMDUUfw" text="{.Zanocy}Eserajskaja Łancuhovaja Kalčuha"/>
+  <string id="eDMDUUfw" text="{.Zanocy}Aserajskaja Łancuhovaja Kalčuha"/>
   <string id="eEMgc7yU" text="{.Muzcynski}Battanijski Uzmocnieny Vielizarny Ščyt"/>
   <string id="Ejx5lXjk" text="{.Muzcynski}Revilski Pieraślednik"/>
   <string id="EOz0edW4" text="{.Muzcynski}Stepavy Šałom"/>
   <string id="EPehLvzV" text="{.Mnozny}Impierskija Drotyki"/>
   <string id="EpkGO9qE" text="{.Mnozny}Žaleznyja Machovi"/>
   <string id="eQBDt5Wk" text="{.Muzcynski}Luty Poni"/>
-  <string id="eso5zk60" text="{.Muzcynski}Eserajski Šałom Šlachty"/>
+  <string id="eso5zk60" text="{.Muzcynski}Aserajski Šałom Šlachty"/>
   <string id="eTKxlDl1" text="{.Mnozny}Hornyja Boty Vajskavoda"/>
   <string id="FexNLsO5" text="{.Mnozny}Impierskija Drotyki"/>
   <string id="FHakBPXw" text="{.Muzcynski}Haŭbierk"/>
   <string id="FLBYsvxp" text="{.Muzcynski}Doŭhi Mieč"/>
   <string id="FmN4ryxu" text="{.Muzcynski}Vydatny Mieč"/>
   <string id="FyXM8Iob" text="{.Mnozny}Pustelnyja Satkanyja Naplečniki z Podbiŭkaj"/>
-  <string id="Gbfot0SN" text="{.Zanocy}Eserajskaja Bułava Vieršnika"/>
+  <string id="Gbfot0SN" text="{.Zanocy}Aserajskaja Bułava Vieršnika"/>
   <string id="GEHTam8H" text="{.Muzcynski}Battanijski Ščyt Vyviednika"/>
-  <string id="GFKPrrb8" text="{.Muzcynski}Eserajski Šlachietny Šałom"/>
+  <string id="GFKPrrb8" text="{.Muzcynski}Aserajski Šlachietny Šałom"/>
   <string id="gfvG04SP" text="{.Mnozny}Pustelnyja Skuranyja Naplečniki z Podbiŭkaj"/>
   <string id="gKhpLiyg" text="{.Muzcynski}Kalčužny Płaścinkavy Bard"/>
   <string id="Goloz0Vm" text="{.Muzcynski}Chasnfry"/>
@@ -190,7 +190,7 @@
   <string id="IKhu13vZ" text="{.Muzcynski}Lohki Kruhły Ščyt"/>
   <string id="ilLE877K" text="{.Nijaki}Stepavaje Futravaje Siadło"/>
   <string id="iNJr5HOM" text="{.Zanocy}Pika-Švajka"/>
-  <string id="inquCxkd" text="{.Nijaki}Eserajskaje Kapjo"/>
+  <string id="inquCxkd" text="{.Nijaki}Aserajskaje Kapjo"/>
   <string id="inr9Mt1i" text="{.Zanocy}Chuzaickaja Dzida"/>
   <string id="INWSxn7C" text="{.Mnozny}Bronzavyja Łamielarnyja Naplečniki"/>
   <string id="inYBaDwu" text="{.Muzcynski}Žalezny Azdobleny Piorami Španhienchelm nad Kalčuhaj"/>
@@ -208,7 +208,7 @@
   <string id="JbTCDDb0" text="{.Mnozny}Bałty"/>
   <string id="jEHLd5gm" text="{.Muzcynski}Kilidž"/>
   <string id="JfPqJbK6" text="{.Muzcynski}Chutki Čardžer"/>
-  <string id="jhgVsWKr" text="{.Muzcynski}Tajł"/>
+  <string id="jhgVsWKr" text="{.Muzcynski}Koń Ciał"/>
   <string id="jjHpXY4d" text="{.Muzcynski}Futravy Kaptur"/>
   <string id="JkLoAelJ" text="{.Mnozny}Kalčužnyja Naplečniki"/>
   <string id="jm9CnURw" text="{.Mnozny}Ciažkija Streły z Šyłam"/>
@@ -216,21 +216,21 @@
   <string id="Jt0Mcn4D" text="{.Zanocy}Brania Dzikuna"/>
   <string id="JW1mE68R" text="{.Zanocy}Šmatsłajovaja Pustelnaja Roba"/>
   <string id="jy1VQ7Yg" text="{.Zanocy}Chuzaickaja Bułava Vieršnika"/>
-  <string id="KD4pxN2C" text="{.Muzcynski}Eserajski Šlachietny Mieč"/>
+  <string id="KD4pxN2C" text="{.Muzcynski}Aserajski Šlachietny Mieč"/>
   <string id="KIxX6dH2" text="{.Muzcynski}Hruby Futr nad Łancuhami"/>
   <string id="kOV5t7Yx" text="{.Zanocy}Danuścika"/>
   <string id="KpyTaAwL" text="{.Muzcynski}Horny Płaścinkavy Šlachietny Šałom"/>
   <string id="L0aYVd65" text="{.Zanocy}Tunika Prostaha Čałavieka"/>
   <string id="l2j9CAQn" text="{.Muzcynski}Mieč Bastarda"/>
-  <string id="l2pEOHk6" text="{.Zanocy}Eserajskaja Siakiera"/>
+  <string id="l2pEOHk6" text="{.Zanocy}Aserajskaja Siakiera"/>
   <string id="Ldqb9oAF" text="{.Mnozny}Hornyja Pałdrony Vajskavoda"/>
-  <string id="LI3rc6S2" text="{.Zanocy}Eserajskaja Kidalnaja Siakiera"/>
+  <string id="LI3rc6S2" text="{.Zanocy}Aserajskaja Kidalnaja Siakiera"/>
   <string id="lPeLZge5" text="{.Mnozny}Miechavyja Braniavanyja Štany"/>
   <string id="lspv3mUE" text="{.Muzcynski}Šypavany Stepavy Bard"/>
   <string id="Lt8nT1hb" text="{.Mnozny}Łamielarnyja Naplečniki"/>
   <string id="LwxELoZL" text="{.Zanocy}Hornaja Łuskataja Paŭzaprežka"/>
   <string id="lwxOPEPx" text="{.Muzcynski}Hładyus"/>
-  <string id="lxDZyKbU" text="{.Zanocy}Eserajskaja Ciažkaja Dzida"/>
+  <string id="lxDZyKbU" text="{.Zanocy}Aserajskaja Ciažkaja Dzida"/>
   <string id="LyaWykYa" text="{.Muzcynski}Šlachietny Šałom z Haržetam"/>
   <string id="Mbf8qAxs" text="{.Zanocy}Doŭhaja Dvuchhałovaja Siakiera"/>
   <string id="mbT1uNPa" text="{.Muzcynski}Kinžał"/>
@@ -239,14 +239,14 @@
   <string id="MS1gaKXk" text="{.Zanocy}Battanijskaja Kidalnaja Siakiera"/>
   <string id="ms4AKynl" text="{.Mnozny}Płaścinkavyja Boty"/>
   <string id="mStaaxFF" text="{.Mnozny}Pustelnyja Kolcakalčužnyja Naplečniki"/>
-  <string id="MUdwS6jH" text="{.Muzcynski}Dužy Tajł"/>
+  <string id="MUdwS6jH" text="{.Muzcynski}Dužy Ciał"/>
   <string id="mVAaWp5U" text="{.Muzcynski}Impierski Čardžer"/>
   <string id="mXQsNAmZ" text="{.Muzcynski}Streły z Šyłam"/>
   <string id="n21mBbbR" text="{.Muzcynski}Bil"/>
   <string id="nbjUGjaZ" text="{.Muzcynski}Sturhijski Ščyt Vieršnika"/>
   <string id="newiAaR9" text="{.Muzcynski}Upryhožany Šałom z Abaronaj Vačej"/>
   <string id="nhoDWrVf" text="{.Muzcynski}Sietkavy Testavy Mieč 2h"/>
-  <string id="Nk7bQUWJ" text="{.Muzcynski}Eserajski Dvuchručny Mieč"/>
+  <string id="Nk7bQUWJ" text="{.Muzcynski}Aserajski Dvuchručny Mieč"/>
   <string id="NKZ0P4aU" text="{.Zanocy}Vłandyjskaja Doŭhaja Dzida"/>
   <string id="nmLZEjYg" text="{.Zanocy}Sietkavaja Testavaja Bułava 2h"/>
   <string id="Np2OoVNd" text="{.Zanocy}Sturhijskaja Lohkaja Bułava"/>
@@ -320,7 +320,7 @@
   <string id="UG8aeEQH" text="{.Muzcynski}Impierski Vajskovy Koń"/>
   <string id="UHcXARc6" text="{.Muzcynski}Ild"/>
   <string id="UHItyOQY" text="{.Zanocy}Stepavaja Šypavanaja Skura"/>
-  <string id="ujB7Eq9S" text="{.Zanocy}Eserajskaja Bułava"/>
+  <string id="ujB7Eq9S" text="{.Zanocy}Aserajskaja Bułava"/>
   <string id="UkR3F9lV" text="{.Muzcynski}Vłandyjski Šlachietny Mieč"/>
   <string id="Ur3Q4U5x" text="{.Zanocy}Ciažkaja Šapka z Tartanam"/>
   <string id="uvmmBd41" text="{.Muzcynski}Pustelny Złučany Kruhły Ščyt"/>
@@ -350,7 +350,7 @@
   <string id="WsUvpBwM" text="{.Muzcynski}Chutki Karotki Łuk"/>
   <string id="wwAFqJE3" text="{.Muzcynski}Zbrojny Mieč"/>
   <string id="WXjQNIJW" text="{.Muzcynski}Volny Zahornuty Pustelny Šałom"/>
-  <string id="WyxIVvhe" text="{.Muzcynski}Eserajski Avalny Ščyt"/>
+  <string id="WyxIVvhe" text="{.Muzcynski}Aserajski Avalny Ščyt"/>
   <string id="xb2tMFSz" text="{.Muzcynski}Karotki Łuk"/>
   <string id="XcWJyWlF" text="{.Zanocy}Vłandyjskaja Bułava"/>
   <string id="XiI81DUa" text="{.Muzcynski}Doŭhi Łuk Surodziča"/>
@@ -379,7 +379,7 @@
   <string id="z8d2uyY1" text="{.Muzcynski}Siehmientavany Cervieljer nad Šnuravanym Koifam"/>
   <string id="ZFde57gC" text="{.Nijaki}Tryvałaje Hornaje Siadło"/>
   <string id="ZJweh5Oh" text="{.Zanocy}Siakiera Bastarda"/>
-  <string id="zKJtr0MV" text="{.Muzcynski}Mekieb"/>
+  <string id="zKJtr0MV" text="{.Muzcynski}Makieb"/>
   <string id="zmEnxUpL" text="{.Muzcynski}Impierski Łuskaty Bard"/>
   <string id="zNoDVcHg" text="{.Muzcynski}Trotter"/>
   <string id="Zo7jJbQj" text="{.Muzcynski}Pustelny Šałom z Kalčuhaj"/>
