--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_native_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_native_strings_xml_by.xml
@@ -157,13 +157,13 @@
     <string id="f4ZeGAJi" text="Adnosnaja chutkaść snarada: {SPEED} m/s" />
     <string id="f5y9qyDb" text="Ruka" />
     <string id="F6dUDgg3" text="Paraza" />
-    <string id="F6l8hFEA" text="Skały Ekkałat" />
+    <string id="F6l8hFEA" text="Skały Akkałatu" />
     <string id="F6WH1JaM" text="Zabłakavać dla Čalcoŭ Kamandy" />
     <string id="fFLBT9wb" text="Hrudzi" />
     <string id="FFNJTsDL" text="Vyhnać hulca" />
     <string id="FgJpTBp1" text="Siabroŭski Ahoń: Škoda Dalokaha Boju pa Sabie" />
     <string id="fjD2tRXW" text="Padbarodak Upiarod" />
-    <string id="fJHsYtKu" text="Ečeryjon" />
+    <string id="fJHsYtKu" text="Echieryjon" />
     <string id="fJqJiJvl" text="Užyvać Realistyčny Błok" />
     <string id="fnJQO5Os" text="Vyšynia Končyka Nosa" />
     <string id="FoSTFipC" text="{PLAYER_NAME} zaraz razhłušany." />
@@ -217,7 +217,7 @@
     <string id="KHx75GnA" text="Vada" />
     <string id="Kl9aqIuX" text="Rasa" />
     <string id="kQh0O7gn" text="Abiarycie žadanaha vajara napačatku raŭnda z dapamohaj zołata." />
-    <string id="KtRCqiVO" text="Pendraik" />
+    <string id="KtRCqiVO" text="Piendrak" />
     <string id="kVwwG63i" text="Dazvolić Źmienu Mapy Hałasavańniem" />
     <string id="kW4c2liv" text="Užyvać Błok, što Zaležyć ad Chodu Animacyi" />
     <string id="L0lGQWt5" text="Kolkaść Botaŭ Kamandy 2" />
@@ -227,7 +227,7 @@
     <string id="laIfauZH" text="Vypukłaść Vačej" />
     <string id="lauXoy6d" text="Kolkaść Botaŭ na Pabudovu" />
     <string id="lclQSt39" text="Limit Času Raŭnda (siekundaŭ)" />
-    <string id="ldIXGrVi" text="Jurykskałar" />
+    <string id="ldIXGrVi" text="Urykskałar" />
     <string id="lDPQa5gc" text="Paroh Aŭtabałansu Kamandaŭ" />
     <string id="likop0am" text="Pačać Hałasavańnie" />
     <string id="LkiQDpi5" text="Pamier Vušej" />
@@ -397,7 +397,7 @@
     <string id="WsmZzaOq" text="Słupok" />
     <string id="WXAaWZVf" text="Nazad" />
     <string id="Wxlhg1f1" text="Boty" />
-    <string id="WxM16s2Y" text="Les Druimor" />
+    <string id="WxM16s2Y" text="Les Drummor" />
     <string id="wxzhtvZR" text="Čas Adradžeńnia Abaroncaŭ" />
     <string id="xgr9rlx3" text="Paŭstańnie Asraka" />
     <string id="xhnV76OL" text="Prystań Skała" />
@@ -413,7 +413,7 @@
     <string id="yekjRMT1" text="Statystyka Dueli" />
     <string id="YhDDXj0I" text="Kańjon" />
     <string id="YNkPy4ta" text="Kłanavy Matč" />
-    <string id="YntJTd09" text="Haradzišča Ebieret" />
+    <string id="YntJTd09" text="Haradzišča Ebierech" />
     <string id="YoNYyLba" text="Kapjo" />
     <string id="yQtzabbe" text="Zakryć" />
     <string id="yQu6aBw4" text="Pierahrupavacca!" />
