--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_photo_mode_strings_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/Native/std_photo_mode_strings_xml_by.xml
@@ -5,21 +5,21 @@
 
   <strings>
     <string id="05w8Tl7n" text="Step" />
-    <string id="0RRNliSj" text="Eserajskaja Śpioka" />
+    <string id="0RRNliSj" text="Aserajskaja Śpioka" />
     <string id="2vhjwPaN" text="Vioska" />
     <string id="4MiTBGqa" text="Dzień Nordaŭ" />
     <string id="7kFFXSuD" text="Ciomnyja Chmary" />
     <string id="7UbviYSn" text="Sturhijskaja Łaska" />
     <string id="8fjSQ7HR" text="Lohkija Vobłaki" />
-    <string id="9cu05mOt" text="Eserajskaja Łaska" />
+    <string id="9cu05mOt" text="Aserajskaja Łaska" />
     <string id="9fBE1860" text="Kiniematahrafičnaja Ciepłynia" />
     <string id="aANW0vf6" text="Battanijskaja Lutaść" />
     <string id="aJMfnIEx" text="Łaskavaja Ciepłynia" />
     <string id="an3FWmCf" text="Chałodny Viecier" />
     <string id="avaaYc8p" text="Battanijskaja Łaska" />
-    <string id="cyfUXaO9" text="Eserajskaja Lutaść" />
+    <string id="cyfUXaO9" text="Aserajskaja Lutaść" />
     <string id="DHbyketz" text="Sturhijskaja Lutaść" />
-    <string id="dI09DMKh" text="Serca Rydžyi" />
+    <string id="dI09DMKh" text="Serca Rahaei" />
     <string id="dQBd8xBj" text="Apanuraść" />
     <string id="etcyLg5M" text="Radaść Masłu" />
     <string id="FyYbkPtB" text="Impierskaja Lutaść" />
