--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_SandBox_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_SandBox_by.xml
@@ -96,7 +96,7 @@
     <string id="3sRdGQou" text="Syści" />
     <string id="3tmXBpRH" text="Vy majecie racyju. Ja nie zmahu zrabić hetaje, tamu viarnusia da svajoj siamji. " />
     <string id="3UX334MB" text="Chmm... Fajna. Prabačcie za turbavańnie." />
-    <string id="3v3ZTccn" text="Vy budziecie {?PLAYER.GENDER}pryličana da dačok{?}pryličany da synoŭ{\?} Esera. Vaša kroŭ - naša kroŭ. Našyja miačy buduć baranić vašyja pravy, a vašyja buduć baranić našyja. Vy možacie pić z našych studniaŭ i adpačyvać u cieniach našych drevaŭ. Vam moža być dadziena prava sudzić i źbirać padatki z aazisaŭ i haradoŭ." />
+    <string id="3v3ZTccn" text="Vy budziecie {?PLAYER.GENDER}pryličana da dačok{?}pryličany da synoŭ{\?} Asera. Vaša kroŭ - naša kroŭ. Našyja miačy buduć baranić vašyja pravy, a vašyja buduć baranić našyja. Vy možacie pić z našych studniaŭ i adpačyvać u cieniach našych drevaŭ. Vam moža być dadziena prava sudzić i źbirać padatki z aazisaŭ i haradoŭ." />
     <string id="3WA4MLzx" text="Tak ci inačaj, vy paškadujecie ab hetym. Kali ja prajhraju, moj narod adpomścić.[if:idle_angry][ib:warrior]" />
     <string id="3wzCrzEq" text="{HERO.LINK} {?HERO.GENDER}atrymała ŭzrovień{?}atrymaŭ uzrovień{\?}." />
     <string id="3XimdHOn" text="Adkul mnie viedać, što jon nie prymušaje vas havaryć hetaje?" />
@@ -617,7 +617,7 @@
     <string id="FVOfzPot" text="{SALUTATION}... Dziakuj za majo vyzvaleńnie." />
     <string id="FvtAJE2Q" text="Kab znajści dačku {QUEST_GIVER.LINK}, vy vyrašyli naviedać blizkija vioski." />
     <string id="Fwm0PwVb" text="Vydatna. Jak ja ŭžo kazaŭ, nam treba prynamsi {NUMBER} dzion, da taho jak jany sasłabiać svaju pilnaść. Ja dam vam viedać, kali pryjdzie čas. Pamiatajcie, my čakajem ciemry nočy, kab ździejśnić udar." />
-    <string id="FxKgQECI" text="Lukan, Lukan kažu, šlachcič. Byŭ narodžany starym, staŭ bolš starym.{newline}Žyvie ŭ pałacy z zołata. Dzie zaŭsiody ciomna i zaŭsiody chałodna." />
+    <string id="FxKgQECI" text="Lukon, Lukon kažu, šlachcič. Byŭ narodžany starym, staŭ bolš starym.{newline}Žyvie ŭ pałacy z zołata. Dzie zaŭsiody ciomna i zaŭsiody chałodna." />
     <string id="fzNqSoeL" text="Vykarystajcie hetulki času, kolki vam patrebna, spadarynia." />
     <string id="g5G8AJ5n" text="Zaraz vy {?CONVERSATION_NPC.GENDER}maja pałonnaja{?}moj pałonny{\?}." />
     <string id="g5ofoKa8" text="Tak... Zaraz ja vas uspaminaju." />
@@ -809,7 +809,7 @@
     <string id="KAvwytDK" text="Vy nie pryviali {DAUGHTER.NAME} da {QUEST_GIVER.LINK}. {?QUEST_GIVER.GENDER}Jana ŭ{?}Jon u{\?} lutaści." />
     <string id="kB65SzbF" text="Tak." />
     <string id="KbMew14D" text="Chacia vierchavod bandy i karavańnik abjadnali svaje siły, vy paśpiachova pieramahli ich i zachapili zdabyču sabie." />
-    <string id="kc3tLqGy" text="Vy kirujecie synami Esera ŭ vajnie i miry..." />
+    <string id="kc3tLqGy" text="Vy kirujecie synami Asera ŭ vajnie i miry..." />
     <string id="kc6vCycY" text="Što mienavita vy žadajecie ad mianie?" />
     <string id="kDItfaaN" text="Ja vaźmu jašče adnu, kab sahrecca pa darozie dadomu." />
     <string id="ke0IvBXb" text="Što jašče ja mahu patłumačyć?" />
@@ -1129,7 +1129,7 @@
     <string id="qmqTLZ9R" text="Dziakuj, {?PLAYER.GENDER}šlachcianka{?}šlachcič{\?}. Vy {?PLAYER.GENDER}našaja ratavalnica{?}našy ratavalnik{\?}." />
     <string id="qN2LYVIO" text="Tak, ja viedaju {HERO.LINK}." />
     <string id="QNpuyzc4" text="Supakojsia. Mianie bolej nie cikavić hetaje miesca. Supakojsia." />
-    <string id="qObicX7y" text="Ja klanusia prysłuchoŭvacca da vašych vyrakaŭ u adpaviednaści z zakonami Esera i sačyć za tym, kab maje surodzičy taksama prysłuchoŭvalisia da ich...." />
+    <string id="qObicX7y" text="Ja klanusia prysłuchoŭvacca da vašych vyrakaŭ u adpaviednaści z zakonami Asera i sačyć za tym, kab maje surodzičy taksama prysłuchoŭvalisia da ich...." />
     <string id="QP7L2YLG" text="Hučyć pavabna." />
     <string id="qPRl07mD" text="Dobra. Tady ja pasprabuju." />
     <string id="qQ71Ux7D" text=" Vašaje vojska padzialiłasia svajoj ježaj z vašymi hałodnymi vajarami. Vy vydatkavali {INFLUENCE}{INFLUENCE_ICON}." />
@@ -1237,7 +1237,7 @@
     <string id="t4KwQOB7" text="{HERO.NAME} {?HERO.GENDER}dasiahnuła{?}dasiahnuŭ{\?} paŭnalećcia." />
     <string id="T5jd4m69" text="Tak, budzie tolki viesialej. Pra jakuju sumu vy dumali?" />
     <string id="tc4DyxaL" text="Tak, ja chacieŭ by pradać." />
-    <string id="TCIaDC9X" text="Vorahi Vłandyi pryjšli z hrukatam. Karol Dertart sklikaŭ svaich ludziej u zamak!{newline}Jany paskakali da jaho, hrukajučy kapytami. Ale Dertart užo loh spać." />
+    <string id="TCIaDC9X" text="Vorahi Vłandyi pryjšli z hrukatam. Karol Dertert sklikaŭ svaich ludziej u zamak!{newline}Jany paskakali da jaho, hrukajučy kapytami. Ale Dertert užo loh spać." />
     <string id="TD8Jxn7U" text="Dobraha dnia, {?PLAYER.GENDER}maja šlachcianka{?}moj šlachcič{\?}." />
     <string id="TDgoyFBi" text="Nia nadta šmat pracy... Šviva, cyroŭka, inšaje." />
     <string id="TdnD29Ax" text="Ach! Vy amal złavili mianie! Moža, vy nie byli dosyć {?PLAYER.GENDER}uvažlivaj{?}uvažlivym{\?}. Žadajecie pastavić jašče 1000 denaraŭ na stoł i pasprabavać iznoŭ?" />
@@ -1466,7 +1466,7 @@
     <string id="yAOQnMVw" text="Vy z {FACTION}, vierna? Značyć vy {?NOTABLE.GENDER}maja pałonnaja{?}moj pałonny{\?}." />
     <string id="ybagz7xY" text="Nia treba dziakavać." />
     <string id="ydGffr9O" text="Dziakuj, {?PLAYER.GENDER}dobraja pani{?}dobry panovie{\?}. Ja nikoli nie zabudu jak vy mnie akazali dobruju pasłuhu.[if:convo_calm_friendly]" />
-    <string id="YDMlCaaz" text="Vialiki Chan Mońčah padymaje ruku. My ŭsie słuchajem jaho zahad!{newline}Vialiki Chan Mońčah zjazdžaje. My viartajemsia spać i hrać." />
+    <string id="YDMlCaaz" text="Vialiki Chan Mončuh padymaje ruku. My ŭsie słuchajem jaho zahad!{newline}Vialiki Chan Mončuh zjazdžaje. My viartajemsia spać i hrać." />
     <string id="YdwLnWa1" text="Kirunak dački i razbojnika" />
     <string id="YdZtydK4" text="Tak zdaryłasia, {PLAYER.NAME}, što ja {?SPEAKER.GENDER}abiacała{?}abiacaŭ{\?} {FACTION_LEADER} naniać kampaniju najmitaŭ dla nastupnaj kampanii." />
     <string id="ye4oqBFB" text="Vy prajhrali ŭ nastolnuju hulniu i nie zmahli dapamahčy {QUEST_GIVER.LINK}. &quot;Dziakuj za sprobu, {PLAYER.NAME}, ale, zdajecca, ja {?QUEST_GIVER.GENDER}abrała{?}abraŭ{\?} nie taho čałavieka dla hetaj pracy.&quot;" />
