--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBox/std_TaleWorlds_CampaignSystem_by.xml
@@ -322,7 +322,7 @@
   <string id="3TmLIou4" text="Žyv."/>
   <string id="3UB3qhjk" text="{VALUE}% chutkaść ruchu partyjaŭ zaklikanych u vašaje vojska."/>
   <string id="3uvbVxfx" text="Vy dastavili zbroju da {QUEST_GIVER.LINK} jak i abiacali."/>
-  <string id="3v3ZTccn" text="Vy budziecie pryličany da {?PLAYER.GENDER}dočak{?}synoŭ{\?} Esera. Vašaja kroŭ - našaja kroŭ. Našyja miačy buduć baranić vašyja pravy, a vašyja buduć baranić našyja. Vy možacie pić z našych studniaŭ i adpačyvać u cieniach našych drevaŭ. Vam moža być daravana prava sudzić i źbirać padatki z aazisaŭ i haradoŭ."/>
+  <string id="3v3ZTccn" text="Vy budziecie pryličany da {?PLAYER.GENDER}dočak{?}synoŭ{\?} Asera. Vašaja kroŭ - našaja kroŭ. Našyja miačy buduć baranić vašyja pravy, a vašyja buduć baranić našyja. Vy možacie pić z našych studniaŭ i adpačyvać u cieniach našych drevaŭ. Vam moža być daravana prava sudzić i źbirać padatki z aazisaŭ i haradoŭ."/>
   <string id="3V5udYJO" text="Vy rekrutavali razbojnikaŭ u svaju partyju. {QUEST_GIVER.LINK} znachodzić vašy raźviazak prymalnym i pasyłaje vam abiacanyja {GOLD_AMOUNT}{GOLD_ICON}."/>
   <string id="3vFxRKja" text="Vy admovilisia ad jaho prapanovy i vyrašyli siłaj zabrać astatni prybytak. Vašy učynak raschvalavaŭ viaskovych ziamianaŭ i razzłavaŭ žycharoŭ. Častka viaskoŭcaŭ sprabavała supracivicca. U svarcy paranili {WOUNDED_COUNT} vašych ludziej."/>
   <string id="3VxA6HaZ" text="Heta dla mianie."/>
@@ -2400,7 +2400,7 @@
   <string id="JBa4DO2u" text="{VALUE}% škoda, što nanosicca ścienam padčas bambavańnia ŭ abłozie."/>
   <string id="jbAtOsIy" text="Patahonnyja Majsterni"/>
   <string id="jBN2LlgF" text="My budziem zmahacca da apošniaj kropli kryvi!"/>
-  <string id="jbPZTSP4" text="Sadžytaryjus"/>
+  <string id="jbPZTSP4" text="Kientaŭr"/>
   <string id="Jc1YXXjN" text="prytok dzikich źviaroŭ"/>
   <string id="jd4qUGEA" text="Ja žadaju abmierkavać kančatkovyja ŭmovy majho šlubu z {COURTSHIP_PARTNER}."/>
   <string id="JDfnPFsW" text="{PEACEMAKER_RULER.NAME} z haspadarstva {KINGDOM_CONSIDERING_PEACE} {?QUEST_GIVER.GENDER}vyrašyła{?}vyrašyŭ{\?} abviaścić mir z haspadarstvam {KINGDOM} niahledziačy na supraciŭ svajho sojmu."/>
@@ -2566,7 +2566,7 @@
   <string id="KbQQV5rI" text="Maja klatva - heta maja klatva. Ja nie mahu jaje parušyć. (Pierakanańnie viernaści nie atrymałasia.)"/>
   <string id="KBxajw4c" text="Uvajści ŭ viaźnicu (Čyt)"/>
   <string id="kc3RfwFb" text="Ja pasprabuju być karysnym, {?PLAYER.GENDER}maja pani{?}panovie{\?}."/>
-  <string id="kc3tLqGy" text="Vy viadziecie synoŭ Esera ŭ vajnie i kirujecie ŭ miry..."/>
+  <string id="kc3tLqGy" text="Vy viadziecie synoŭ Asera ŭ vajnie i kirujecie ŭ miry..."/>
   <string id="KC7rLf4b" text="{?IS_BATTANIA}Bard{?}Mieniestrel{\?} prymušaŭ dzicio zavučvać havorki epičnych hierojaŭ, navučajučy {?CHILD.GENDER}jaje{?}jaho{\?} pokliču da honaru vašaha naroda za svaich prodkaŭ."/>
   <string id="Kc9oatmM" text="Chutkaja Stralba"/>
   <string id="kcuNzSvf" text="Ja maju inšych ludziej na prymiecie."/>
@@ -3540,7 +3540,7 @@
   <string id="QNV1b5s5" text="Henyja brakańjery dahetul ŭ spravie?[ib:normal2][if:convo_undecided_open]"/>
   <string id="qNxdWLFY" text="Dyk, ja mušu palavać na ich?"/>
   <string id="QO0EX2O3" text="Viadoma. Ja mahu zahadać adnamu kampańjonu i {TROOP_AMOUNT} vajaram supravadzić vašyja statki na pašu ŭ {TARGET_SETTLEMENT}."/>
-  <string id="qObicX7y" text="Ja klanusia prysłuchoŭvacca da vašych pastanovaŭ u adpaviednaści z zakonami Esera i sačyć za tym, kab maje svajaki taksama prysłuchoŭvalisia da ich..."/>
+  <string id="qObicX7y" text="Ja klanusia prysłuchoŭvacca da vašych pastanovaŭ u adpaviednaści z zakonami Asera i sačyć za tym, kab maje svajaki taksama prysłuchoŭvalisia da ich..."/>
   <string id="qOhDHFyH" text="Vy čarhovy chałuj {QUEST_GIVER.NAME}? Niaŭžo {?QUEST_GIVER.GENDER}jana pasłała{?}jon pasłaŭ{\?} ciabie palavać na mianie, jak na žyviołu? Dyk, dumaju, vy zrazumieli, što złavili nia zajca, a lva.[if:convo_confused_annoyed][ib:aggressive]"/>
   <string id="QOiPDGbf" text="Ja nikoli nia {?SPEAKER.GENDER}čuła{?}čuŭ{\?} pra vašy kłan. Ja nie {?SPEAKER.GENDER}ŭpeŭniena{?}ŭpeŭnieny{\?}, što mahu davierycca vam.[ib:closed][if:convo_grave]"/>
   <string id="QOMr1QS7" text="{VALUE}% škoda suprać bandytaŭ padčas adpraŭleńnia vajaroŭ na zmahańnie z voraham."/>
@@ -4283,7 +4283,7 @@
   <string id="VlbCFDWu" text="Što vam treba ad mianie?"/>
   <string id="VldAzBo5" text="Ja mušu niešta skazać. Toje, što my zrabili z toj vioskaj - heta było niasłušna. Bo jany byli niavinnymi ziemlarobami, ich chaty i pali nielha było rabavać i spalvać. Ja bolej nia budu hetaha rabić."/>
   <string id="VLLAOXve" text="Čakańnie nočy dla zładžvańnia zasady"/>
-  <string id="VlOGrGSn" text="Vašy piersanaž stupiŭ na šlach pryhod u vieku..."/>
+  <string id="VlOGrGSn" text="Vašy piersanaž pajšoŭ šlacham pryhodaŭ uva ŭzroście..."/>
   <string id="VlPD0Dhh" text="Tolki šlachietnyja vasały haspadara {FACTION_LEADER} majuć honar nieści svaje ŭłasnyja ściahi. Ale prasłužyŭšy peŭny čas najmitam, mahčyma, vy zmožacie zasłužyć mahčymaść prysiahnuć haspadaru {FACTION_LEADER} i stać jaho vasałam, atrymaŭšy prava abrać ułasny ściah i zmahacca pad im u boi."/>
   <string id="VlU9nnLY" text="Dobra. Addajcie nam naležnaje, i vy zmožacie prajści."/>
   <string id="vLVAfcta" text="Tamaskinskaja Stal{@Plural}ślitkaŭ tamaskinskaj stali{\@}"/>
