--- a/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.2.11/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
@@ -601,7 +601,7 @@
     <string id="Cdecpigb" text="{.Muzcynski}Sturhijski Karenny{@Plural}Sturhijskich Karennych{\@}" />
     <string id="CHxRDUN1" text="{.Nijaki}Tryvałaje Futravaje Siadło" />
     <string id="CjjzWA1r" text="{.Muzcynski}Pustelny Vajskovy Koń{@Plural}Pustelnych Vajskovych Koniej{\@}" />
-    <string id="daI3Ybk8" text="{.Muzcynski}Hlintarski Poni{@Plural}Hlintarskich Poni{\@}" />
+    <string id="daI3Ybk8" text="{.Muzcynski}Hlintorski Poni{@Plural}Hlintorskich Poni{\@}" />
     <string id="ds1nrqNv" text="{.Muzcynski}Łuskaty Bard Katafrakta" />
     <string id="DvGueBrU" text="Lon{@Plural}skrutkaŭ lonu{\@}" />
     <string id="EfRKaKs0" text="{.Zanocy}Stepavaja Futravaja Zaprežka" />
@@ -609,7 +609,7 @@
     <string id="ELsDFwAD" text="Vino{@Plural}amfaraŭ vina{\@}" />
     <string id="f2O1XjYd" text="{.Zanocy}Sabaka" />
     <string id="FhTUc64z" text="{.Muzcynski}Husak" />
-    <string id="FkqbAeoY" text="{.Muzcynski}Śvienrynski Poni{@Plural}Śvienrynskich Poni{\@}" />
+    <string id="FkqbAeoY" text="{.Muzcynski}Švienrynski Poni{@Plural}Švienrynskich Poni{\@}" />
     <string id="GD4aQgl7" text="Aviečka{@Plural}aviečak{\@}" />
     <string id="GSiBXOfg" text="{.Muzcynski}Sturhijski Trotter{@Plural}Sturhijskich Trotteraŭ{\@}" />
     <string id="HAcujhib" text="{.Muzcynski}Viarblud{@Plural}Viarbludaŭ{\@}" />
@@ -663,7 +663,7 @@
     <string id="U3SWNkFt" text="{.Muzcynski}Vajskovy Koń{@Plural}Vajskovych Koniej{\@}" />
     <string id="ufnnUxKb" text="Skura{@Plural}skryniaŭ skury{\@}" />
     <string id="uRqm1nJ7" text="{.Nijaki}Lohkaje Siadło" />
-    <string id="uTt4HX6V" text="{.Muzcynski}Koń Tajł{@Plural}Koniej Tajł{\@}" />
+    <string id="uTt4HX6V" text="{.Muzcynski}Koń Ciał{@Plural}Koniej Ciał{\@}" />
     <string id="VbL6GFmy" text="Masła{@Plural}bondaŭ masła{\@}" />
     <string id="Vj4ZBxm5" text="{.Muzcynski}Uzmocnieny Płaścinkavy Bard" />
     <string id="voORddjl" text="{.Muzcynski}Košyjan{@Plural}Koniej Košyjan{\@}" />
@@ -671,7 +671,7 @@
     <string id="VqCS28U1" text="{.Muzcynski}Muł{@Plural}Mułaŭ{\@}" />
     <string id="Vqu67a3b" text="Syry šoŭk{@Plural}skrutkaŭ syroha šoŭku{\@}" />
     <string id="vRIpgxhi" text="{.Muzcynski}Vybar Fartuny" />
-    <string id="vXsifw1K" text="{.Muzcynski}Esalihat{@Plural}Koniej Esalihat{\@}" />
+    <string id="vXsifw1K" text="{.Muzcynski}Asalihat{@Plural}Koniej Asalihat{\@}" />
     <string id="w6Oz5viK" text="{.Muzcynski}Mižziemny Połfry{@Plural}Mižziemnych Połfry{\@}" />
     <string id="W8r7A7qH" text="{.Muzcynski}Łuskaty Paŭbard" />
     <string id="Wj98Otmo" text="{.Muzcynski}Stepavy Čardžer{@Plural}Stepavych Čardžeraŭ{\@}" />
